--- a/Contact.html
+++ b/Contact.html
@@ -8,13 +8,13 @@
 
     <!-- Bring in our bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   </head>
 
   <body>
 
-    <body background="background.jpg">
+    <body background="assets/images/background.jpg">
     <!-- Our rows function in containers (grid created). -->
 
 
@@ -91,9 +91,9 @@
               <hr>
               <table style="width:100%">
                 <tr>
-                  <th><img id="size" src="pic1.png"></th>
-                  <th><img id="size" src="pic2.png"></th> 
-                  <th><img id="size" src="pic3.png"></th>
+                  <th><img id="size" src="assets/images/pic1.png"></th>
+                  <th><img id="size" src="assets/images/pic2.png"></th> 
+                  <th><img id="size" src="assets/images/pic3.png"></th>
                 </tr>
               </table>
             </div>
