--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,9 @@
         </ul>
         
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="index.html">about</a></li>
+          <li><a href="portfolio.html">portfolio</a></li>
+          <li><a href="contact.html">contact</a></li>
           
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -120,6 +120,12 @@
 
 
     </div>
+
+    <footer id="footer">
+        <div class="panel panel-default"> 
+          <div class="bottom" class="panel-body ">Panel Content</div>
+        </div>
+     </footer>
   </body>
 </html>
 
