pretty much done going to go over with TA

--- a/Contact.html
+++ b/Contact.html
@@ -113,7 +113,7 @@
 
         <footer id="footer">
         <div class="panel panel-default"> 
-          <div class="bottom" class="panel-body ">Panel Content</div>
+          <div class="bottom" class="panel-body ">Copyright &copy; 2018 Akhil Sompalli</div></div>
         </div>
      </footer>
 
