--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">about</a></li>
           <li><a href="portfolio.html">portfolio</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li><a href="Contact.html">contact</a></li>
           
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -55,7 +55,7 @@
         <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-body">
-              <h1>
+              <h1 id="color">
                   contact
               </h1>
 
@@ -86,7 +86,7 @@
         <div class="col-md-3">
           <div class="panel panel-default">
            <div class="panel-body" >
-              <h1> Connect With Me</h1>
+              <h1 id="color"> Connect With Me</h1>
               <hr>
               <table style="width:100%">
                 <tr>
