--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">about</a></li>
           <li><a href="portfolio.html">portfolio</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li><a href="Contact.html">contact</a></li>
           
         </ul>
       </div><!-- /.navbar-collapse -->
