--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,9 @@
               <hr>
               <row>
                 <div class="col-md-6">
+                <a href = "https://sompaak.github.io/Psychic-Game/">
                   <img class="image" src="assets/images/port1.jpg">
+                </a>
                 </div>
 
                 <div class="col-md-6">
