adding week-4-game live link

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,9 @@
                 </div>
 
                 <div class="col-md-6">
-                  <img class="image" src="assets/images/port2.jpg">
+                  <a href="https://sompaak.github.io/week-4-game">
+                    <img class="image" src="assets/images/port2.jpg">
+                  </a>
                   <br>
                 </div>
 
